Integrador/obj/analizador.output
Terminals unused in grammar

   '|'
   '^'
   '<'
   '>'
   '/'
   '%'


Estado 26 conflictos: 28 reducción(ones)/reducción(ones)
Estado 35 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 38 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 115 conflictos: 13 desplazamiento(s)/reducción(ones)
Estado 116 conflictos: 13 desplazamiento(s)/reducción(ones)
Estado 151 conflictos: 4 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: input $end

    1 input: /* vacío */
    2      | input line
    3      | error line

    4 line: '\n'
    5     | TIPO_DATO declaracion
    6     | sentencia

    7 sentencia: bloque_sentencias
    8          | sentencia_expresion
    9          | sentencia_bifurcacion
   10          | sentencia_bucle
   11          | sentencia_salto
   12          | sentencia_retorno
   13          | '\n'

   14 bloque_sentencias: '{' '}'

   15 $@1: /* vacío */

   16 bloque_sentencias: '{' '\n' declaracion_list $@1 sentencia_list '\n' '}'

   17 declaracion_list: /* vacío */

   18 $@2: /* vacío */

   19 declaracion_list: TIPO_DATO declaracion $@2 '\n' declaracion_list

   20 declaracion: declaracion_funcion
   21            | declaracion_variables ';'

   22 declaracion_funcion: IDENTIFICADOR '(' listaParametros ')' def_dec

   23 def_dec: bloque_sentencias
   24        | ';'

   25 declaracion_variables: identVariable
   26                      | identVariable ',' declaracion_variables

   27 listaParametros: /* vacío */
   28                | TIPO_DATO IDENTIFICADOR ',' listaParametros
   29                | TIPO_DATO IDENTIFICADOR

   30 identVariable: IDENTIFICADOR
   31              | IDENTIFICADOR '=' expresion_constante

   32 sentencia_list: /* vacío */
   33               | sentencia_list sentencia

   34 sentencia_expresion: expresion ';'
   35                    | asignacion ';'

   36 expresion: expresion_logica
   37          | expresion_logica '?' expresion ':' expresion
   38          | expresion operacion_matematica expresion
   39          | llamada_funcion

   40 operacion_matematica: '-'
   41                     | '+'
   42                     | '*'
   43                     | OPERADOR_MULTIPLICATIVO

   44 expresion_logica: expresion_prefija
   45                 | expresion operacion_logica expresion

   46 operacion_logica: OPERADOR_ASIGNACION
   47                 | OPERADOR_O_LOGICO
   48                 | OPERADOR_Y_LOGICO
   49                 | OPERADOR_O_INCLUSIVO
   50                 | OPERADOR_O_EXCLUSIVO
   51                 | '&'
   52                 | OPERADOR_IGUALDAD
   53                 | OPERADOR_CORRIMIENTO
   54                 | OPERADOR_RELACIONAL

   55 expresion_prefija: expresion_postfija
   56                  | OPERADOR_SIZEOF '(' TIPO_DATO ')'
   57                  | OPERADOR_INCREMENTO expresion_prefija
   58                  | operador_unario expresion_prefija

   59 expresion_postfija: expresion_constante
   60                   | expresion_indexada
   61                   | expresion_postfija OPERADOR_INCREMENTO

   62 expresion_indexada: IDENTIFICADOR
   63                   | expresion_indexada '[' expresion ']'
   64                   | expresion_indexada '.' IDENTIFICADOR
   65                   | expresion_indexada FLECHA IDENTIFICADOR

   66 expresion_constante: CONSTANTE_CADENA
   67                    | CONSTANTE_DECIMAL
   68                    | CONSTANTE_OCTAL
   69                    | CONSTANTE_HEXADECIMAL
   70                    | CONSTANTE_CARACTER
   71                    | CONSTANTE_REAL
   72                    | '(' expresion ')'

   73 asignacion: expresion_indexada operador_asignacion expresion

   74 operador_asignacion: '='
   75                    | OPERADOR_ASIGNACION

   76 sentencia_bifurcacion: IF '(' expresion ')' bloque_sentencias
   77                      | IF '(' expresion ')' bloque_sentencias ELSE bloque_sentencias
   78                      | SWITCH '(' expresion ')' '{' sentencia_caso_list '}'

   79 sentencia_caso_list: /* vacío */
   80                    | sentencia_caso sentencia_caso_list

   81 sentencia_caso: CASE expresion ':' sentencia
   82               | DEFAULT ':' sentencia

   83 sentencia_bucle: WHILE '(' expresion ')' bloque_sentencias
   84                | DO bloque_sentencias WHILE '(' expresion ')' ';'
   85                | FOR '(' lista_asignaciones ';' expresion ';' expresion ')' bloque_sentencias

   86 lista_asignaciones: asignacion
   87                   | asignacion ',' lista_asignaciones

   88 sentencia_salto: CONTINUE ';'
   89                | BREAK ';'

   90 sentencia_retorno: RETURN ';'
   91                  | RETURN expresion ';'

   92 operador_unario: '&'
   93                | '*'
   94                | '+'
   95                | '-'
   96                | '~'
   97                | '!'

   98 llamada_funcion: IDENTIFICADOR '(' parametros ')'

   99 parametros: /* vacío */
  100           | IDENTIFICADOR
  101           | IDENTIFICADOR ',' parametros


Terminales con las reglas donde aparecen

$end (0) 0
'\n' (10) 4 13 16 19
'!' (33) 97
'%' (37)
'&' (38) 51 92
'(' (40) 22 56 72 76 77 78 83 84 85 98
')' (41) 22 56 72 76 77 78 83 84 85 98
'*' (42) 42 93
'+' (43) 41 94
',' (44) 26 28 87 101
'-' (45) 40 95
'.' (46) 64
'/' (47)
':' (58) 37 81 82
';' (59) 21 24 34 35 84 85 88 89 90 91
'<' (60)
'=' (61) 31 74
'>' (62)
'?' (63) 37
'[' (91) 63
']' (93) 63
'^' (94)
'{' (123) 14 16 78
'|' (124)
'}' (125) 14 16 78
'~' (126) 96
error (256) 3
IF (258) 76 77
ELSE (259) 77
SWITCH (260) 78
WHILE (261) 83 84
DO (262) 84
FOR (263) 85
CASE (264) 81
DEFAULT (265) 82
CONTINUE (266) 88
BREAK (267) 89
RETURN (268) 90 91
TIPO_DATO (269) 5 19 28 29 56
OPERADOR_ASIGNACION (270) 46 75
OPERADOR_O_LOGICO (271) 47
OPERADOR_Y_LOGICO (272) 48
OPERADOR_O_INCLUSIVO (273) 49
OPERADOR_O_EXCLUSIVO (274) 50
OPERADOR_IGUALDAD (275) 52
OPERADOR_RELACIONAL (276) 54
OPERADOR_CORRIMIENTO (277) 53
OPERADOR_MULTIPLICATIVO (278) 43
OPERADOR_INCREMENTO (279) 57 61
OPERADOR_SIZEOF (280) 56
FLECHA (281) 65
IDENTIFICADOR (282) 22 28 29 30 31 62 64 65 98 100 101
CONSTANTE_CADENA (283) 66
CONSTANTE_DECIMAL (284) 67
CONSTANTE_OCTAL (285) 68
CONSTANTE_HEXADECIMAL (286) 69
CONSTANTE_CARACTER (287) 70
CONSTANTE_REAL (288) 71


No terminales con las reglas donde aparecen

$accept (59)
    en la izquierda: 0
input (60)
    en la izquierda: 1 2 3, en la derecha: 0 2
line (61)
    en la izquierda: 4 5 6, en la derecha: 2 3
sentencia (62)
    en la izquierda: 7 8 9 10 11 12 13, en la derecha: 6 33 81 82
bloque_sentencias (63)
    en la izquierda: 14 16, en la derecha: 7 23 76 77 83 84 85
$@1 (64)
    en la izquierda: 15, en la derecha: 16
declaracion_list (65)
    en la izquierda: 17 19, en la derecha: 16 19
$@2 (66)
    en la izquierda: 18, en la derecha: 19
declaracion (67)
    en la izquierda: 20 21, en la derecha: 5 19
declaracion_funcion (68)
    en la izquierda: 22, en la derecha: 20
def_dec (69)
    en la izquierda: 23 24, en la derecha: 22
declaracion_variables (70)
    en la izquierda: 25 26, en la derecha: 21 26
listaParametros (71)
    en la izquierda: 27 28 29, en la derecha: 22 28
identVariable (72)
    en la izquierda: 30 31, en la derecha: 25 26
sentencia_list (73)
    en la izquierda: 32 33, en la derecha: 16 33
sentencia_expresion (74)
    en la izquierda: 34 35, en la derecha: 8
expresion (75)
    en la izquierda: 36 37 38 39, en la derecha: 34 37 38 45 63 72
    73 76 77 78 81 83 84 85 91
operacion_matematica (76)
    en la izquierda: 40 41 42 43, en la derecha: 38
expresion_logica (77)
    en la izquierda: 44 45, en la derecha: 36 37
operacion_logica (78)
    en la izquierda: 46 47 48 49 50 51 52 53 54, en la derecha: 45
expresion_prefija (79)
    en la izquierda: 55 56 57 58, en la derecha: 44 57 58
expresion_postfija (80)
    en la izquierda: 59 60 61, en la derecha: 55 61
expresion_indexada (81)
    en la izquierda: 62 63 64 65, en la derecha: 60 63 64 65 73
expresion_constante (82)
    en la izquierda: 66 67 68 69 70 71 72, en la derecha: 31 59
asignacion (83)
    en la izquierda: 73, en la derecha: 35 86 87
operador_asignacion (84)
    en la izquierda: 74 75, en la derecha: 73
sentencia_bifurcacion (85)
    en la izquierda: 76 77 78, en la derecha: 9
sentencia_caso_list (86)
    en la izquierda: 79 80, en la derecha: 78 80
sentencia_caso (87)
    en la izquierda: 81 82, en la derecha: 80
sentencia_bucle (88)
    en la izquierda: 83 84 85, en la derecha: 10
lista_asignaciones (89)
    en la izquierda: 86 87, en la derecha: 85 87
sentencia_salto (90)
    en la izquierda: 88 89, en la derecha: 11
sentencia_retorno (91)
    en la izquierda: 90 91, en la derecha: 12
operador_unario (92)
    en la izquierda: 92 93 94 95 96 97, en la derecha: 58
llamada_funcion (93)
    en la izquierda: 98, en la derecha: 39
parametros (94)
    en la izquierda: 99 100 101, en la derecha: 98 101


estado 0

    0 $accept: . input $end

    error  desplazar e ir al estado 1

    $end                   reduce usando la regla 1 (input)
    IF                     reduce usando la regla 1 (input)
    SWITCH                 reduce usando la regla 1 (input)
    WHILE                  reduce usando la regla 1 (input)
    DO                     reduce usando la regla 1 (input)
    FOR                    reduce usando la regla 1 (input)
    CONTINUE               reduce usando la regla 1 (input)
    BREAK                  reduce usando la regla 1 (input)
    RETURN                 reduce usando la regla 1 (input)
    TIPO_DATO              reduce usando la regla 1 (input)
    OPERADOR_INCREMENTO    reduce usando la regla 1 (input)
    OPERADOR_SIZEOF        reduce usando la regla 1 (input)
    IDENTIFICADOR          reduce usando la regla 1 (input)
    CONSTANTE_CADENA       reduce usando la regla 1 (input)
    CONSTANTE_DECIMAL      reduce usando la regla 1 (input)
    CONSTANTE_OCTAL        reduce usando la regla 1 (input)
    CONSTANTE_HEXADECIMAL  reduce usando la regla 1 (input)
    CONSTANTE_CARACTER     reduce usando la regla 1 (input)
    CONSTANTE_REAL         reduce usando la regla 1 (input)
    '&'                    reduce usando la regla 1 (input)
    '-'                    reduce usando la regla 1 (input)
    '+'                    reduce usando la regla 1 (input)
    '*'                    reduce usando la regla 1 (input)
    '('                    reduce usando la regla 1 (input)
    '\n'                   reduce usando la regla 1 (input)
    '{'                    reduce usando la regla 1 (input)
    '~'                    reduce usando la regla 1 (input)
    '!'                    reduce usando la regla 1 (input)

    input  ir al estado 2


estado 1

    3 input: error . line

    IF                     desplazar e ir al estado 3
    SWITCH                 desplazar e ir al estado 4
    WHILE                  desplazar e ir al estado 5
    DO                     desplazar e ir al estado 6
    FOR                    desplazar e ir al estado 7
    CONTINUE               desplazar e ir al estado 8
    BREAK                  desplazar e ir al estado 9
    RETURN                 desplazar e ir al estado 10
    TIPO_DATO              desplazar e ir al estado 11
    OPERADOR_INCREMENTO    desplazar e ir al estado 12
    OPERADOR_SIZEOF        desplazar e ir al estado 13
    IDENTIFICADOR          desplazar e ir al estado 14
    CONSTANTE_CADENA       desplazar e ir al estado 15
    CONSTANTE_DECIMAL      desplazar e ir al estado 16
    CONSTANTE_OCTAL        desplazar e ir al estado 17
    CONSTANTE_HEXADECIMAL  desplazar e ir al estado 18
    CONSTANTE_CARACTER     desplazar e ir al estado 19
    CONSTANTE_REAL         desplazar e ir al estado 20
    '&'                    desplazar e ir al estado 21
    '-'                    desplazar e ir al estado 22
    '+'                    desplazar e ir al estado 23
    '*'                    desplazar e ir al estado 24
    '('                    desplazar e ir al estado 25
    '\n'                   desplazar e ir al estado 26
    '{'                    desplazar e ir al estado 27
    '~'                    desplazar e ir al estado 28
    '!'                    desplazar e ir al estado 29

    line                   ir al estado 30
    sentencia              ir al estado 31
    bloque_sentencias      ir al estado 32
    sentencia_expresion    ir al estado 33
    expresion              ir al estado 34
    expresion_logica       ir al estado 35
    expresion_prefija      ir al estado 36
    expresion_postfija     ir al estado 37
    expresion_indexada     ir al estado 38
    expresion_constante    ir al estado 39
    asignacion             ir al estado 40
    sentencia_bifurcacion  ir al estado 41
    sentencia_bucle        ir al estado 42
    sentencia_salto        ir al estado 43
    sentencia_retorno      ir al estado 44
    operador_unario        ir al estado 45
    llamada_funcion        ir al estado 46


estado 2

    0 $accept: input . $end
    2 input: input . line

    $end                   desplazar e ir al estado 47
    IF                     desplazar e ir al estado 3
    SWITCH                 desplazar e ir al estado 4
    WHILE                  desplazar e ir al estado 5
    DO                     desplazar e ir al estado 6
    FOR                    desplazar e ir al estado 7
    CONTINUE               desplazar e ir al estado 8
    BREAK                  desplazar e ir al estado 9
    RETURN                 desplazar e ir al estado 10
    TIPO_DATO              desplazar e ir al estado 11
    OPERADOR_INCREMENTO    desplazar e ir al estado 12
    OPERADOR_SIZEOF        desplazar e ir al estado 13
    IDENTIFICADOR          desplazar e ir al estado 14
    CONSTANTE_CADENA       desplazar e ir al estado 15
    CONSTANTE_DECIMAL      desplazar e ir al estado 16
    CONSTANTE_OCTAL        desplazar e ir al estado 17
    CONSTANTE_HEXADECIMAL  desplazar e ir al estado 18
    CONSTANTE_CARACTER     desplazar e ir al estado 19
    CONSTANTE_REAL         desplazar e ir al estado 20
    '&'                    desplazar e ir al estado 21
    '-'                    desplazar e ir al estado 22
    '+'                    desplazar e ir al estado 23
    '*'                    desplazar e ir al estado 24
    '('                    desplazar e ir al estado 25
    '\n'                   desplazar e ir al estado 26
    '{'                    desplazar e ir al estado 27
    '~'                    desplazar e ir al estado 28
    '!'                    desplazar e ir al estado 29

    line                   ir al estado 48
    sentencia              ir al estado 31
    bloque_sentencias      ir al estado 32
    sentencia_expresion    ir al estado 33
    expresion              ir al estado 34
    expresion_logica       ir al estado 35
    expresion_prefija      ir al estado 36
    expresion_postfija     ir al estado 37
    expresion_indexada     ir al estado 38
    expresion_constante    ir al estado 39
    asignacion             ir al estado 40
    sentencia_bifurcacion  ir al estado 41
    sentencia_bucle        ir al estado 42
    sentencia_salto        ir al estado 43
    sentencia_retorno      ir al estado 44
    operador_unario        ir al estado 45
    llamada_funcion        ir al estado 46


estado 3

   76 sentencia_bifurcacion: IF . '(' expresion ')' bloque_sentencias
   77                      | IF . '(' expresion ')' bloque_sentencias ELSE bloque_sentencias

    '('  desplazar e ir al estado 49


estado 4

   78 sentencia_bifurcacion: SWITCH . '(' expresion ')' '{' sentencia_caso_list '}'

    '('  desplazar e ir al estado 50


estado 5

   83 sentencia_bucle: WHILE . '(' expresion ')' bloque_sentencias

    '('  desplazar e ir al estado 51


estado 6

   84 sentencia_bucle: DO . bloque_sentencias WHILE '(' expresion ')' ';'

    '{'  desplazar e ir al estado 27

    bloque_sentencias  ir al estado 52


estado 7

   85 sentencia_bucle: FOR . '(' lista_asignaciones ';' expresion ';' expresion ')' bloque_sentencias

    '('  desplazar e ir al estado 53


estado 8

   88 sentencia_salto: CONTINUE . ';'

    ';'  desplazar e ir al estado 54


estado 9

   89 sentencia_salto: BREAK . ';'

    ';'  desplazar e ir al estado 55


estado 10

   90 sentencia_retorno: RETURN . ';'
   91                  | RETURN . expresion ';'

    OPERADOR_INCREMENTO    desplazar e ir al estado 12
    OPERADOR_SIZEOF        desplazar e ir al estado 13
    IDENTIFICADOR          desplazar e ir al estado 14
    CONSTANTE_CADENA       desplazar e ir al estado 15
    CONSTANTE_DECIMAL      desplazar e ir al estado 16
    CONSTANTE_OCTAL        desplazar e ir al estado 17
    CONSTANTE_HEXADECIMAL  desplazar e ir al estado 18
    CONSTANTE_CARACTER     desplazar e ir al estado 19
    CONSTANTE_REAL         desplazar e ir al estado 20
    '&'                    desplazar e ir al estado 21
    '-'                    desplazar e ir al estado 22
    '+'                    desplazar e ir al estado 23
    '*'                    desplazar e ir al estado 24
    '('                    desplazar e ir al estado 25
    ';'                    desplazar e ir al estado 56
    '~'                    desplazar e ir al estado 28
    '!'                    desplazar e ir al estado 29

    expresion            ir al estado 57
    expresion_logica     ir al estado 35
    expresion_prefija    ir al estado 36
    expresion_postfija   ir al estado 37
    expresion_indexada   ir al estado 58
    expresion_constante  ir al estado 39
    operador_unario      ir al estado 45
    llamada_funcion      ir al estado 46


estado 11

    5 line: TIPO_DATO . declaracion

    IDENTIFICADOR  desplazar e ir al estado 59

    declaracion            ir al estado 60
    declaracion_funcion    ir al estado 61
    declaracion_variables  ir al estado 62
    identVariable          ir al estado 63


estado 12

   57 expresion_prefija: OPERADOR_INCREMENTO . expresion_prefija

    OPERADOR_INCREMENTO    desplazar e ir al estado 12
    OPERADOR_SIZEOF        desplazar e ir al estado 13
    IDENTIFICADOR          desplazar e ir al estado 64
    CONSTANTE_CADENA       desplazar e ir al estado 15
    CONSTANTE_DECIMAL      desplazar e ir al estado 16
    CONSTANTE_OCTAL        desplazar e ir al estado 17
    CONSTANTE_HEXADECIMAL  desplazar e ir al estado 18
    CONSTANTE_CARACTER     desplazar e ir al estado 19
    CONSTANTE_REAL         desplazar e ir al estado 20
    '&'                    desplazar e ir al estado 21
    '-'                    desplazar e ir al estado 22
    '+'                    desplazar e ir al estado 23
    '*'                    desplazar e ir al estado 24
    '('                    desplazar e ir al estado 25
    '~'                    desplazar e ir al estado 28
    '!'                    desplazar e ir al estado 29

    expresion_prefija    ir al estado 65
    expresion_postfija   ir al estado 37
    expresion_indexada   ir al estado 58
    expresion_constante  ir al estado 39
    operador_unario      ir al estado 45


estado 13

   56 expresion_prefija: OPERADOR_SIZEOF . '(' TIPO_DATO ')'

    '('  desplazar e ir al estado 66


estado 14

   62 expresion_indexada: IDENTIFICADOR .
   98 llamada_funcion: IDENTIFICADOR . '(' parametros ')'

    '('  desplazar e ir al estado 67

    $default  reduce usando la regla 62 (expresion_indexada)


estado 15

   66 expresion_constante: CONSTANTE_CADENA .

    $default  reduce usando la regla 66 (expresion_constante)


estado 16

   67 expresion_constante: CONSTANTE_DECIMAL .

    $default  reduce usando la regla 67 (expresion_constante)


estado 17

   68 expresion_constante: CONSTANTE_OCTAL .

    $default  reduce usando la regla 68 (expresion_constante)


estado 18

   69 expresion_constante: CONSTANTE_HEXADECIMAL .

    $default  reduce usando la regla 69 (expresion_constante)


estado 19

   70 expresion_constante: CONSTANTE_CARACTER .

    $default  reduce usando la regla 70 (expresion_constante)


estado 20

   71 expresion_constante: CONSTANTE_REAL .

    $default  reduce usando la regla 71 (expresion_constante)


estado 21

   92 operador_unario: '&' .

    $default  reduce usando la regla 92 (operador_unario)


estado 22

   95 operador_unario: '-' .

    $default  reduce usando la regla 95 (operador_unario)


estado 23

   94 operador_unario: '+' .

    $default  reduce usando la regla 94 (operador_unario)


estado 24

   93 operador_unario: '*' .

    $default  reduce usando la regla 93 (operador_unario)


estado 25

   72 expresion_constante: '(' . expresion ')'

    OPERADOR_INCREMENTO    desplazar e ir al estado 12
    OPERADOR_SIZEOF        desplazar e ir al estado 13
    IDENTIFICADOR          desplazar e ir al estado 14
    CONSTANTE_CADENA       desplazar e ir al estado 15
    CONSTANTE_DECIMAL      desplazar e ir al estado 16
    CONSTANTE_OCTAL        desplazar e ir al estado 17
    CONSTANTE_HEXADECIMAL  desplazar e ir al estado 18
    CONSTANTE_CARACTER     desplazar e ir al estado 19
    CONSTANTE_REAL         desplazar e ir al estado 20
    '&'                    desplazar e ir al estado 21
    '-'                    desplazar e ir al estado 22
    '+'                    desplazar e ir al estado 23
    '*'                    desplazar e ir al estado 24
    '('                    desplazar e ir al estado 25
    '~'                    desplazar e ir al estado 28
    '!'                    desplazar e ir al estado 29

    expresion            ir al estado 68
    expresion_logica     ir al estado 35
    expresion_prefija    ir al estado 36
    expresion_postfija   ir al estado 37
    expresion_indexada   ir al estado 58
    expresion_constante  ir al estado 39
    operador_unario      ir al estado 45
    llamada_funcion      ir al estado 46


estado 26

    4 line: '\n' .
   13 sentencia: '\n' .
